--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
 <meta charset ="utf-8">
-<h1>Привіт, це мій сайт. </h1>
+<h1> Sasha Vladyka </h1>
+<hr>
+<h2> Portfolio <h2>
+<hr>
+<p>&copy; Sasha Vladyka </p>
 </html>
